update front end

--- a/greatesthits.html
+++ b/greatesthits.html
@@ -6,6 +6,9 @@
     <link rel='stylesheet' href='greatesthits.css' type="text/css" />
 </head>
 <body>
+    <div id="main">
+        <h1>Ranker</h1>
+    </div>
     <h1>Iron Maiden Greatest Hits</h1>
     <div id="searcharea">
         <select name="trackselect" id="trackselect">
