--- a/greatesthits.html
+++ b/greatesthits.html
@@ -8,36 +8,45 @@
 <body>
     <div id="main">
         <h1>Ranker</h1>
-    </div>
-    <h1>Iron Maiden Greatest Hits</h1>
-    <div id="searcharea">
-        <select name="trackselect" id="trackselect">
-            <option value="-1">All</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-        </select>
-        <div id="searchbuttonarea">
-            <button id="searchbutton" onclick="greatest.search();">Search</button>
+        <div id="band_chooser" name="header_chooser">
+            <span id="band_chooser_label">Band:</span>
+            <select id="band_list" onchange="greatest.getMaxTracks(this);">
+                <option value="0">Select Band</option>
+            </select>
+        </div>
+        <div id="type_chooser" name="header_chooser">
+            <span id="type_chooser_label">Type of List:</span>
+            <select id="type_list" onchange="greatest.showListType(this);">
+                <option value="0">Select Type</option>
+                <option value="1">Greatest Hits by Track Position</option>
+                <option value="2">Greatest Hits by Writer(s)</option>
+            </select>
         </div>
     </div>
-    <div id="resultarea">
-        <div id="result"></div>
+    <div id="hits_div" name="list_div">
+        <h1><span name="band_name"></span> Greatest Hits by Track Position</h1>
+        <div id="searcharea">
+            <select name="trackselect" id="trackselect">
+            </select>
+            <div id="searchbuttonarea">
+                <button id="searchbutton" onclick="greatest.search();">Search</button>
+            </div>
+        </div>
+        <div id="resultarea">
+            <div id="result"></div>
+        </div>
+        <div id="selectionarea">
+            <div id="selection">
+                <table id="selectionTable">
+                    <tbody id="selectionTableBody"></tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    <div id="selectionarea">
-        <div id="selection">
-            <table id="selectionTable">
-                <tbody id="selectionTableBody"></tbody>
-            </table>
+    <div id="writers_div" name="list_div">
+        <h1><span name="band_name"></span> Greatest Hits by Writer</h1>
+        <div id="writer_list_div">
+
         </div>
     </div>
     <script src="greatesthits.js" type="text/javascript"></script>
