--- a/greatesthits.html
+++ b/greatesthits.html
@@ -46,7 +46,9 @@
     <div id="writers_div" name="list_div">
         <h1><span name="band_name"></span> Greatest Hits by Writer</h1>
         <div id="writer_list_div">
-
+            <select name="writerselect" id="writerselect" multiple>
+            </select>
+            <input type="button" value="Search" onclick="greatest.searchByWriters();" />
         </div>
     </div>
     <script src="greatesthits.js" type="text/javascript"></script>
