--- a/greatesthits.html
+++ b/greatesthits.html
@@ -52,5 +52,6 @@
         </div>
     </div>
     <script src="greatesthits.js" type="text/javascript"></script>
+    <script src="greatesthitsconfig.js" type="text/javascript"></script>
 </body>
 </html>
