--- a/greatesthits.html
+++ b/greatesthits.html
@@ -48,10 +48,23 @@
         <div id="writer_list_div">
             <select name="writerselect" id="writerselect" multiple>
             </select>
+            <span id="writerstrictspan">
+                <input type="checkbox" id="writerstrict" />
+                <span id="writerstrictlabel">Strict Search</span>
+            </span>
             <input type="button" value="Search" onclick="greatest.searchByWriters();" />
+            <div id="writersresultarea">
+                <div id="writersresult"></div>
+            </div>
+            <div id="writerselectionarea">
+                <table id="writerselection">
+                    <tbody id="writerSelectionTableBody"></tbody>
+                </table>
+            </div>
         </div>
     </div>
     <script src="greatesthits.js" type="text/javascript"></script>
     <script src="greatesthitsconfig.js" type="text/javascript"></script>
+    <script src="greatesthitsfirstcall.js" type="text/javascript"></script>
 </body>
 </html>
