--- a/greatesthits.html
+++ b/greatesthits.html
@@ -24,6 +24,7 @@
                 <option value="4">Greatest Hits by Time Range</option>
                 <option value="5">Track vs. Track</option>
                 <option value="6">Greatest Hits Opener/Closer</option>
+                <option value="7">Album Ranker</option>
             </select>
         </div>
     </div>
@@ -117,6 +118,19 @@
             <div id="opener_closerselectionarea">
                 <table id="opener_closerselection">
                     <tbody id="opener_closerSelectionTableBody"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div id="album_ranker_div" name="list_div">
+        <h1><span name="band_name"></span> Greatest Hits by Opener/Closer</h1>
+        <div id="album_ranker_list_div">
+            <div id="album_rankersresultarea">
+                <div id="album_rankersresult"></div>
+            </div>
+            <div id="album_rankerselectionarea">
+                <table id="album_rankerselection">
+                    <tbody id="album_rankerSelectionTableBody"></tbody>
                 </table>
             </div>
         </div>
