--- a/greatesthits.html
+++ b/greatesthits.html
@@ -157,6 +157,11 @@
             </div>
         </div>
     </div>
+    <div id="total_div" name="list_div">
+        <div id="totalarea">
+            <span id="total_time_label">Total Time:</span><span id="total_time_span"></span>
+        </div>
+    </div>
     <script src="greatesthits.js" type="text/javascript"></script>
     <script src="greatesthitsconfig.js" type="text/javascript"></script>
     <script src="greatesthitsfirstcall.js" type="text/javascript"></script>
