minify javascript, defer calls until page load

--- a/greatesthits.html
+++ b/greatesthits.html
@@ -6,6 +6,9 @@
     <link rel='stylesheet' href='greatesthits.css' type="text/css" />
 </head>
 <body>
+    <script type="text/javascript">
+        window.addEventListener("load",pageFullyLoaded,false);
+    </script>
     <div id="main">
         <h1>Ranker</h1>
         <div id="band_chooser" name="header_chooser">
