--- a/greatesthits.html
+++ b/greatesthits.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <script type="text/javascript">
-        window.addEventListener("load",pageFullyLoaded,false);
+        
+        /*function pageFullyLoaded(e) {
+            //override this function
+            console.log("pageFullyLoaded function needs to be overridden.");
+        }*/
     </script>
     <div id="main">
         <h1>Ranker</h1>
