--- a/greatesthits.html
+++ b/greatesthits.html
@@ -6,13 +6,6 @@
     <link rel='stylesheet' href='greatesthits.css' type="text/css" />
 </head>
 <body>
-    <script type="text/javascript">
-        
-        /*function pageFullyLoaded(e) {
-            //override this function
-            console.log("pageFullyLoaded function needs to be overridden.");
-        }*/
-    </script>
     <div id="main">
         <h1>Ranker</h1>
         <div id="band_chooser" name="header_chooser">
@@ -170,7 +163,7 @@
         </div>
     </div>
     <script src="greatesthits.js" type="text/javascript"></script>
-    <script src="greatesthitsconfig.js" type="text/javascript"></script>
-    <script src="greatesthitsfirstcall.js" type="text/javascript"></script>
+    <script defer src="greatesthitsconfig.js" type="text/javascript"></script>
+    <script defer src="greatesthitsfirstcall.js" type="text/javascript"></script>
 </body>
 </html>
