--- a/greatesthits.html
+++ b/greatesthits.html
@@ -5,7 +5,29 @@
     <title>Greatest Hits Builder</title>
     <link rel='stylesheet' href='greatesthits.css' type="text/css" />
 </head>
-<body>
+<body id="mainbody">
+    <script type="text/javascript">
+        var greatestLoad = greatestLoad || {};
+        window.addEventListener("load", loadJS, false);
+        greatestLoad.currentScriptIndex = -1;
+        greatestLoad.list = ["greatesthits.js", "greatesthitsconfig.js", "greatesthitsfirstcall.js"];
+        
+        greatestLoad.loadScript = function () {
+            greatestLoad.currentScriptIndex++;
+            if (greatestLoad.currentScriptIndex >= greatestLoad.list.length) {
+                return;
+            }
+            var body = document.getElementById("mainbody");
+            var s = document.createElement("script");
+            s.setAttribute("type", "text/javascript");
+            s.setAttribute("defer", "");
+            s.setAttribute("src", greatestLoad.list[greatestLoad.currentScriptIndex] + "?v=" + Math.random());
+            body.appendChild(s);
+        };
+        function loadJS(e) {
+            greatestLoad.loadScript();
+        }
+    </script>
     <div id="main">
         <h1>Ranker</h1>
         <div id="band_chooser" name="header_chooser">
@@ -162,8 +184,5 @@
             <span id="total_time_label">Total Time:</span><span id="total_time_span"></span>
         </div>
     </div>
-    <script src="greatesthits.js" type="text/javascript"></script>
-    <script defer src="greatesthitsconfig.js" type="text/javascript"></script>
-    <script defer src="greatesthitsfirstcall.js" type="text/javascript"></script>
 </body>
 </html>
