--- a/greatesthits.html
+++ b/greatesthits.html
@@ -44,6 +44,8 @@
                 <option value="2">Greatest Hits by Writer(s)</option>
                 <option value="3">Greatest Hits by Year Range</option>
                 <option value="4">Greatest Hits by Time Range</option>
+                <option value="8">Greatest Hits by Title Tracks</option>
+                <option value="9">Greatest Hits by Letter</option>
                 <option value="5">Track vs. Track</option>
                 <option value="6">Greatest Hits Opener/Closer</option>
                 <option value="7">Album Ranker</option>
@@ -66,6 +68,19 @@
             <div id="selection">
                 <table id="selectionTable">
                     <tbody id="selectionTableBody"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div id="title_tracks_div" name="list_div">
+        <h1><span name="band_name"></span> Greatest Hits by Title Tracks</h1>
+        <div id="title_tracks_result_area">
+            <div id="title_tracks_result"></div>
+        </div>
+        <div id="title_tracks_selection_area">
+            <div id="title_tracks_selection">
+                <table id="title_tracks_selectionTable">
+                    <tbody id="title_tracks_selectionTableBody"></tbody>
                 </table>
             </div>
         </div>
