--- a/greatesthits.html
+++ b/greatesthits.html
@@ -159,6 +159,57 @@
             </div>
         </div>
     </div>
+    <div id="by_letter_div" name="list_div">
+        <h1><span name="band_name"></span> Greatest Hits by Letter</h1>
+        <div id="by_letter_list_div">
+            <select name="by_letterselect" id="by_letter_track">
+                <option value="A">A</option>
+                <option value="B">B</option>
+                <option value="C">C</option>
+                <option value="D">D</option>
+                <option value="E">E</option>
+                <option value="F">F</option>
+                <option value="G">G</option>
+                <option value="H">H</option>
+                <option value="I">I</option>
+                <option value="J">J</option>
+                <option value="K">K</option>
+                <option value="L">L</option>
+                <option value="M">M</option>
+                <option value="N">N</option>
+                <option value="O">O</option>
+                <option value="P">P</option>
+                <option value="Q">Q</option>
+                <option value="R">R</option>
+                <option value="S">S</option>
+                <option value="T">T</option>
+                <option value="U">U</option>
+                <option value="V">V</option>
+                <option value="W">W</option>
+                <option value="X">X</option>
+                <option value="Y">Y</option>
+                <option value="Z">Z</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+            </select>
+            <input type="button" value="Search" onclick="greatest.searchByLetter();" />
+            <div id="by_lettersresultarea">
+                <div id="by_lettersresult"></div>
+            </div>
+            <div id="by_letterselectionarea">
+                <table id="by_letterselection">
+                    <tbody id="by_letterSelectionTableBody"></tbody>
+                </table>
+            </div>
+        </div>
+    </div>
     <div id="album_ranker_div" name="list_div">
         <h1><span name="band_name"></span> Greatest Hits by Opener/Closer</h1>
         <div id="album_ranker_list_div">
